objects/ssot__ProviderActivityGoalMeasure__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivityAttainmentPercentage__c</fullName>
        <label>Activity Attainment Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityProratedAtmtGoalNumber__c</fullName>
        <label>Activity Prorated Attainment Goal</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityProratedGoalNumber__c</fullName>
        <label>Activity Prorated Goal</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityWeightValueNumber__c</fullName>
        <label>Activity Weight Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActualActivityCappedValueNumber__c</fullName>
        <label>Actual Activity Capped Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActualActivityWeightedValueNumber__c</fullName>
        <label>Actual Activity Weighted Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActvtyAtmtDifferenceValueNumber__c</fullName>
        <label>Activity Attainment Difference Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActvtyAttainmentCappedPct__c</fullName>
        <label>Activity Attainment Capped Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AdjustedOverallGoalNumber__c</fullName>
        <label>Adjusted Overall Goal</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AssigneeGoalNumber__c</fullName>
        <label>Assignee Goal</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedActvtyPrrtAtmtValNumber__c</fullName>
        <label>Expected Actvty Prorated Attainment Val</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Provider Activity Goal Measure Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsProductWeightagePopulated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Products Weightage Populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsSuggestedActivity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suggested Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LastProcessingDateTime__c</fullName>
        <label>Last Processing Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OverallGoalNumber__c</fullName>
        <label>Overall Goal</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessingJobIdentifier__c</fullName>
        <label>Processing Job Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductListText__c</fullName>
        <label>Product List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderActivityMeasureTypeId__c</fullName>
        <label>Provider Activity Measure Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderActivityPlanGoalId__c</fullName>
        <label>Provider Activity Plan Goal</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReviewerGoalNumber__c</fullName>
        <label>Reviewer Goal</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SchdTotalProdtActvtyWtValNumber__c</fullName>
        <label>Scheduled Total Prodt Activity Wt Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduledActvtyCappedValueNumber__c</fullName>
        <label>Scheduled Activity Capped Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduledActvtyWeightedValNumber__c</fullName>
        <label>Scheduled Activity Weighted Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalActlProdtActvtyWtValNumber__c</fullName>
        <label>Total Actual Product Activity Wt Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalActualActivityValueNumber__c</fullName>
        <label>Total Actual Activity Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProjActvtyCappedValueNumber__c</fullName>
        <label>Total Projected Activity Capped Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProjectedActivityValueNumber__c</fullName>
        <label>Total Projected Activity Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalScheduledActivityValueNumber__c</fullName>
        <label>Total Scheduled Activity Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800770339_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderActivityGoalMeasure_Provider_rel</label>
        <referenceTo>ssot__ProviderActivityGoal__dlm</referenceTo>
        <relationshipLabel>ProviderActivityGoalMeasure_Provider_rel</relationshipLabel>
        <relationshipName>rel_1752800770339_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800788367_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderActivityGoalMeasure_Provider_rel</label>
        <referenceTo>ssot__ProviderActivityMeasureType__dlm</referenceTo>
        <relationshipLabel>ProviderActivityGoalMeasure_Provider_rel</relationshipLabel>
        <relationshipName>rel_1752800788367_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>